--- a/I2C.build_log.htm
+++ b/I2C.build_log.htm
@@ -4,3 +4,9 @@
 <h1>µVision Build Log</h1>
 <h2>Project:</h2>
 C:\Users\Administrator\Documents\GitHub\TivaNunchuck\I2C.uvproj
+Project File Date:  09/06/2014
+
+<h2>Output:</h2>
+</pre>
+</body>
+</html>
